# django-site

./: .env  .gitignore  .gititignore  README.md  env.example  pyproject.toml
admin_client/: urls.py  views.py
admin_client/migrations/: 0001_initial.py
admin_client/templates/: home.html  login.html  registration.html
api/: mixins.py  urls.py
authorization/: forms.py  models.py  urls.py  views.py
authorization/migrations/: 0001_initial.py
authorization/templates/: login.html
files/: apis.py  models.py  services.py  urls.py  utils.py
files/migrations/: 0001_initial.py
minio_integration/: client.py
server/: db.sqlite3  settings.py  urls.py
server/admin_client/: apps.py  forms.py  managers.py  models.py  views.py
server/admin_client/templates/: home.html  registration.html
server/server/: settings.py
